--- a/UI/css/orders.css
+++ b/UI/css/orders.css
@@ -14,13 +14,30 @@ body {
 
 .dashboard-menu{
   flex: 1;
-  background: #004466;
+  background: #203961;
   display: flex;
   flex-direction: column;
 }
 
 .dashboard-content {
   flex: 4;
+  background-image: url('../img/banner1.jpg');
+  background-size: cover;
+}
+
+.dashboard-content-bg {
+  background: rgba(36, 40, 38, 0.8);
+  min-height: 100%;
+  width: 100%;
+}
+
+.dashboard-content-bg div.page-title {
+  color: #fff;
+  padding-top: 5%;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .menu-bottom {
@@ -49,7 +66,7 @@ body {
 }
 
 .menu {
-  padding: 15px;
+  padding: 8px;
   background: #efefef;
   border-radius: 10px;
   box-shadow: 1px 1px 2px 1px #e65c00;
@@ -110,11 +127,12 @@ input[type='submit'] {
 .orders-list {
   display: flex;
   flex-direction: column;
-  max-width: 1000px;
-  margin: 20px auto;
+  margin: 50px 10%;
   border: #cccccc 1px solid;
   padding: 10px;
   border-radius: 10px;
+  position: absolute;
+  width: 900px;
 }
 
 .order-history {
@@ -127,6 +145,18 @@ input[type='submit'] {
   padding: 10px;
 }
 
+.item, .location {
+  flex: 2;
+}
+
+.id, .qty {
+  flex: 0.5
+}
+
+.order1, .order3 {
+  background: #cccccc;
+}
+
 .order2, .order4 {
   background: #efefef;
 }
@@ -136,8 +166,9 @@ input[type='submit'] {
 }
 
 .column-head {
-  background: #e65c00;
+  background: #203961;
   font-weight: bold;
+  color: #fff;
 }
 
 .edit, .delete  {
@@ -190,6 +221,29 @@ input[type='submit'] {
 
 .order3-mobile {
   background: #efefef;
+}
+
+.scroll-top {
+  color: #e65c00; 
+  font-size: 20px; 
+  position: fixed; 
+  bottom: 20px; 
+  right: 30px;
+  cursor: pointer;
+  padding: 0 7px;
+  border-radius: 50%;
+  background: #efefef;
+  box-shadow: 1px 1px 2px 1px #203961;
+}
+
+.footer {
+  min-height: 30px;
+  background: #203961;
+  bottom: 0;
+  text-align: center;
+  padding-top: 20px;
+  color: #fff;
+  z-index: 2;
 }
 
 @media(max-width: 1215px) {
