--- a/UI/css/orders.css
+++ b/UI/css/orders.css
@@ -23,6 +23,7 @@ body {
   flex: 4;
   background-image: url('../img/banner1.jpg');
   background-size: cover;
+
 }
 
 .dashboard-content-bg {
@@ -38,6 +39,13 @@ body {
   font-size: 20px;
   font-weight: bold;
   text-decoration: underline;
+}
+
+.dashboard-content-bg div.page-title span{
+  background: #e59400;
+  padding: 5px 10px;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .menu-bottom {
@@ -65,11 +73,16 @@ body {
   padding-top: 25px;
 }
 
+.welcome span a {
+  text-decoration: none;
+  color: #fff;
+}
+
 .menu {
   padding: 8px;
   background: #efefef;
   border-radius: 10px;
-  box-shadow: 1px 1px 2px 1px #e65c00;
+  box-shadow: 1px 1px 2px 1px black;
   cursor: pointer;
 }
 
@@ -78,61 +91,15 @@ body {
   width:45px;
 }
 
-.add-item {
-  box-shadow: 1px 1px 2px 1px #004466;
-  padding: 20px;
-  max-width: 400px;
-  border-radius: 10px;
-  margin: 10% auto;
-  background: #e65c00;
-}
-
-form legend {
-  text-align: center;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-form label {
-  display: block;
-  margin-bottom: 10px;
-}
-
-input, #category {
-  border: none;
-  outline: none;
-  box-sizing: border-box;
-  border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 20px;
-  width: 100%;
-}
-
-.sub-total {
-  display: flex;
-  justify-content: space-between;
-}
-
-.sub-total input {
-  flex: 1;
-}
-
-input[type='submit'] {
-  background: green;
-  color: #fff;
-  font-weight: bold;
-  box-shadow: 1px 1px 2px 1px #004466
-}
-
 .orders-list {
   display: flex;
   flex-direction: column;
-  margin: 50px 10%;
+  margin: 50px auto;
   border: #cccccc 1px solid;
   padding: 10px;
   border-radius: 10px;
-  position: absolute;
-  width: 900px;
+  position: relative;
+  max-width: 900px;
 }
 
 .order-history {
@@ -171,30 +138,6 @@ input[type='submit'] {
   color: #fff;
 }
 
-.edit, .delete  {
-  font-size: 20px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.edit {
-  color: green;
-}
-
-.delete {
-  color: red;
-}
-
-.status {
-  cursor: pointer;
-  color: #e65c00;
-  font-weight: bold;
-}
-
-.status:hover {
-  box-shadow: 1px 1px 2px 1px #cccccc;
-}
-
 .order-mobile {
   display: flex;
   flex-direction: column;
@@ -215,16 +158,16 @@ input[type='submit'] {
   flex-direction: column;
 }
 
-.order1-mobile {
+.order1-mobile, .order3-mobile {
   background: #efefef;
 }
 
-.order3-mobile {
-  background: #efefef;
+.order4-mobile, .order2-mobile {
+  background: #cccccc;
 }
 
 .scroll-top {
-  color: #e65c00; 
+  color: #e59400; 
   font-size: 20px; 
   position: fixed; 
   bottom: 20px; 
@@ -244,6 +187,12 @@ input[type='submit'] {
   padding-top: 20px;
   color: #fff;
   z-index: 2;
+}
+
+@media(max-width: 1560px) {
+  .menu-bottom {
+    flex: 1;
+  }
 }
 
 @media(max-width: 1215px) {
