--- a/UI/css/orders.css
+++ b/UI/css/orders.css
@@ -166,6 +166,54 @@ body {
   background: #cccccc;
 }
 
+.add-food-item {
+  display: flex;
+  flex-direction: column;
+  margin: 50px auto;
+  border: #cccccc 1px solid;
+  padding: 10px;
+  border-radius: 10px;
+  position: relative;
+  max-width: 600px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+form label {
+  color: #fff;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+form input {
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  margin-bottom: 10px;
+  box-shadow: 1px 1px 2px 1px #203961;
+}
+
+form input[type='submit'] {
+  background: green;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.sub-input {
+  display: flex;
+}
+
+.price, .quantity {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
 .scroll-top {
   color: #e59400; 
   font-size: 20px; 
