--- a/UI/css/orders.css
+++ b/UI/css/orders.css
@@ -180,6 +180,9 @@ body {
 form {
   display: flex;
   flex-direction: column;
+  background: rgba(36, 40, 38, 0.8);
+  padding: 20px;
+  border-radius: 5px;
 }
 
 form label {
@@ -194,6 +197,8 @@ form input {
   outline: none;
   border: none;
   margin-bottom: 10px;
+  width: 100%;
+  box-sizing: border-box;
   box-shadow: 1px 1px 2px 1px #203961;
 }
 
@@ -206,6 +211,7 @@ form input[type='submit'] {
 
 .sub-input {
   display: flex;
+  width: 100%
 }
 
 .price, .quantity {
