--- a/UI/css/orders.css
+++ b/UI/css/orders.css
@@ -86,6 +86,11 @@ body {
   cursor: pointer;
 }
 
+.menu-top > a {
+  text-decoration: none;
+  color: #000;
+}
+
 .menu-top img {
   height: 60px;
   width:45px;
@@ -218,6 +223,19 @@ form input[type='submit'] {
   display: flex;
   flex: 1;
   flex-direction: column;
+}
+
+.edit, .delete {
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.edit {
+  color: green;
+}
+
+.delete {
+  color: red;
 }
 
 .scroll-top {
