--- a/UI/css/orders.css
+++ b/UI/css/orders.css
@@ -261,6 +261,19 @@ form input[type='submit'] {
   box-shadow: 1px 1px 2px 1px #203961;
 }
 
+.user-front {
+  color: black; 
+  font-size: 14px; 
+  position: fixed; 
+  bottom: 10px; 
+  right: 60px;
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 10px;
+  background: #e59400;
+  box-shadow: 1px 1px 2px 1px #203961;
+}
+
 .footer {
   min-height: 30px;
   background: #203961;
