--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -633,6 +633,19 @@ nav ul li a {
   color: #fff;
 }
 
+.user-front {
+  color: black; 
+  font-size: 14px; 
+  position: fixed; 
+  bottom: 10px; 
+  right: 60px;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 10px;
+  background: #e59400;
+  box-shadow: 1px 1px 2px 1px #203961;
+}
+
 @media(max-width: 1160px) {
   .item-description {
     margin-top: 5px;
