--- a/UI/css/orders.css
+++ b/UI/css/orders.css
@@ -38,7 +38,28 @@ body {
   text-align: center;
   font-size: 20px;
   font-weight: bold;
-  text-decoration: underline;
+}
+
+.all-orders {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
+}
+
+.modify-icons {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+.modify-icons div {
+  text-decoration: none;
+  font-size: 30px;
+  margin-left: 20px
+}
+
+.modify-icons div:first-child {
+  margin-left: 0
 }
 
 .dashboard-content-bg div.page-title span{
@@ -49,7 +70,7 @@ body {
 }
 
 .menu-bottom {
-  flex: 2;
+  flex: 1;
 }
 
 .menu-top{
@@ -119,6 +140,10 @@ body {
 
 .item, .location {
   flex: 2;
+}
+
+.status-col, .row {
+  flex: 1.4
 }
 
 .id, .qty {
@@ -238,6 +263,10 @@ form input[type='submit'] {
 
 .edit, .mark-complete {
   color: green;
+}
+
+.complete {
+  display: none;
 }
 
 .delete, .thumbs-down {
