--- a/views/index.html
+++ b/views/index.html
@@ -60,12 +60,12 @@
         </div>
 
         <div class="auth-form">
-          <form action="food-items.html" class="form-before-click">
+          <form class="form-before-click" id="loginForm">
             <span class="close close-login">&#10062;</span> <br>
             <legend class="form-title">Login</legend>
-            <label for="email">Email:</label>
+            <label for="email">Email: </label><span class="formAlert"></span>
             <input type="email" name="email" id="email1" required placeholder="example@domain.com">
-            <label for="password">Password:</label>
+            <label for="password">Password: </label><span class="formAlert"></span>
             <input type="password" id="password1" name="password" required placeholder="Input your password">
             <input type="submit" value="Submit">
           </form>
@@ -78,6 +78,7 @@
   <script src="js/toggle.js"></script>
   <script src="js/fetch/utility.js"></script>
   <script src="js/fetch/signup.js"></script>
+  <script src="js/fetch/login.js"></script>
 </body>
 
 </html>
