--- a/views/css/style.css
+++ b/views/css/style.css
@@ -297,6 +297,10 @@ nav ul li a {
   cursor: pointer;
 }
 
+.auth-form form input[type=submit]:hover {
+  box-shadow: 1px 1px 2px 1px #000;
+}
+
 .close {
   float: right;
   cursor: pointer;
