--- a/views/index.html
+++ b/views/index.html
@@ -43,17 +43,17 @@
         <div class="auth-form">
           <form class="form-before-click" id="signupForm">
             <span class="close close-signup">&#10062;</span> <br>
-            <legend class="form-title">Signup</legend>
+            <legend class="form-title">SIGNUP</legend>
             <label for="name">Name: </label><span class="formAlert"></span>
-            <input type="text" name="name" id="name" required placeholder="Enter full name">
+            <input type="text" name="name" class="fullname" id="name" required placeholder="Enter full name">
             <label for="email">Email: </label><span class="formAlert"></span>
-            <input type="email" name="email" id="email" required placeholder="example@domain.com">
+            <input type="email" name="email" class="email" id="email" required placeholder="example@domain.com">
             <label for="phone">Phone: </label><span class="formAlert"></span>
-            <input type="text" name="phone" id="phone" required placeholder="Phone (080.....)">
+            <input type="phone" name="phone" class="phone" id="phone" required placeholder="Phone (080.....)">
             <label for="phone">Address: </label><span class="formAlert"></span>
-            <input type="text" name="address" id="address" required placeholder="Residential address">
+            <input type="text" name="address" class="address" id="address" required placeholder="Residential address">
             <label for="password">Password: </label><span class="formAlert"></span>
-            <input type="password" id="password" name="password" required placeholder="Create password">
+            <input type="password" class="password" id="password" name="password" required placeholder="Create password">
             <input type="submit" value="Submit">
           </form>
           <p>Have an account? <span id="login-modal">Login</span></p>
@@ -62,11 +62,11 @@
         <div class="auth-form">
           <form class="form-before-click" id="loginForm">
             <span class="close close-login">&#10062;</span> <br>
-            <legend class="form-title">Login</legend>
+            <legend class="form-title">LOGIN</legend>
             <label for="email">Email: </label><span class="formAlert"></span>
-            <input type="email" name="email" id="email1" required placeholder="example@domain.com">
+            <input type="email" name="email" id="email1" class="email1" required placeholder="example@domain.com">
             <label for="password">Password: </label><span class="formAlert"></span>
-            <input type="password" id="password1" name="password" required placeholder="Input your password">
+            <input type="password" id="password1" class="password1" name="password" required placeholder="Input your password">
             <input type="submit" value="Submit">
           </form>
           <p>I'm new here. <span id="signup-modal">Signup</span></p>
@@ -79,6 +79,7 @@
   <script src="js/fetch/utility.js"></script>
   <script src="js/fetch/signup.js"></script>
   <script src="js/fetch/login.js"></script>
+  <script src="js/fetch/jwt-decode.min.js"></script>
 </body>
 
 </html>
