--- a/views/add-food-item.html
+++ b/views/add-food-item.html
@@ -34,25 +34,26 @@
     </div>
     <div class="dashboard-content">
       <div class="dashboard-content-bg">
+        <div class="pageAlert"></div>
         <div class="page-title">ADD FOOD ITEM</div>
         <div class="add-food-item">
           <form id="postmenu">
-            <label for="item">Food item: </label><span class="formAlert"></span>
-            <input type="text" placeholder="Food item">
-            <label for="description">Description: </label><span class="formAlert"></span>
-            <input type="text" placeholder="Describe item">
-            <label for="category">Category: </label><span class="formAlert"></span>
-            <input type="text" placeholder="Category">
-            <label for="imageURL">Image URL: </label><span class="formAlert"></span>
-            <input type="text" placeholder="Input ImageURL">
+            <label for="item">Food item: <span class="formAlert"></span></label>
+            <input type="text" id="menu" class="menuItem" placeholder="Food item">
+            <label for="description">Description: <span class="formAlert"></span></label>
+            <input type="text" id="description" class="description" placeholder="Describe item">
+            <label for="category">Category: <span class="formAlert"></span></label>
+            <input type="text" id="category" class="category" placeholder="Category">
+            <label for="imageURL">Image URL: <span class="formAlert"></span></label>
+            <input type="text" id="imageURL" class="imageURL" placeholder="Input ImageURL">
             <div class="sub-input">
               <div class="price">
-                <label for="price">Price: </label><span class="formAlert"></span>
-                <input type="text" placeholder="Price">
+                <label for="price">Price: <span class="formAlert"></span></label>
+                <input type="number" id="price" class="price" placeholder="Price">
               </div>
               <div class="quantity">
-                <label for="quantity">Quantity: </label><span class="formAlert"></span>
-                <input type="number" placeholder="Available quantity">
+                <label for="quantity">Quantity: <span class="formAlert"></span></label>
+                <input type="number" id="quantity" class="quantity" placeholder="Available quantity">
               </div>
             </div>
             <input type="submit" value="Submit">
@@ -75,6 +76,8 @@
   </footer>
 
   <script src="js/scroll.js"></script>
+  <script src="js/fetch/utility.js"></script>
+  <script src="js/fetch/post-menu.js"></script>
   <!-- <script src="js/status.js"></script> -->
 </body>
 
