--- a/views/food-items.html
+++ b/views/food-items.html
@@ -30,296 +30,10 @@
       </nav>
     </div>
   </header>
-  <div class="banner">
-
-    <div class="banner1">
-
-    </div>
-
+  
+  <div class="foodContainer">
+    
   </div>
-
-  <div class="food-items">
-    <section class="food" id="local">
-      <div class="category">
-        <div class="category-image local-img">
-          <div class="category-label">
-            <div>LOCAL DELICACIES</div>
-          </div>
-        </div>
-        <div class="items">
-
-          <div class="item">
-            <p class="item-title">Eba, Vegetable, Turkey <em>(&#8358; 2000)</em></p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <p class="item-title">Wheat, Egusi, Isi-ewu <em>(&#8358; 3000)</em></p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <p class="item-title">Pandoyam, Fish, Ogbono <em>(&#8358; 1500)</em></p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <section class="food" id="snacks">
-      <div class="category">
-        <div class="category-image snacks-img">
-          <div class="category-label">
-            <div>SNACKS</div>
-          </div>
-        </div>
-        <div class="items">
-
-          <div class="item">
-            <p class="item-title">Meat pie <em>(&#8358; 1000)</em></p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <p class="item-title">Egg roll <em>(&#8358; 8000)</em></p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <p class="item-title">Sausage <em>(&#8358; 700)</em></p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <section class="food" id="rice">
-      <div class="category">
-        <div class="category-image rice-img">
-          <div class="category-label">
-            <div>RICE</div>
-          </div>
-        </div>
-        <div class="items">
-
-          <div class="item">
-            <p class="item-title">Rice + Turkey</p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <p class="item-title">Rice + Chicken</p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <p class="item-title">Rice + Beef</p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <section class="food" id="pizza">
-      <div class="category">
-        <div class="category-image pizza-img">
-          <div class="category-label">
-            <div>PIZZA</div>
-          </div>
-        </div>
-        <div class="items">
-
-          <div class="item">
-            <p class="item-title">Pizza Margherita</p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <p class="item-title">Pepperoni</p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <p class="item-title">Chicken bacon ranch</p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <section class="food" id="others">
-      <div class="category">
-        <div class="category-image others-img">
-          <div class="category-label">
-            <div>OTHERS</div>
-          </div>
-        </div>
-        <div class="items">
-
-          <div class="item">
-            <p class="item-title">Coca-cola</p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <p class="item-title">5-Alive</p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="text" placeholder="location">
-                <input type="number" required class="quantity" placeholder="Qty">
-                <input type="submit" value="Send" class="send-order">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <p class="item-title">Hollandia</p>
-            <p class="item-description">
-              This is delicious. You will surely come for more.
-            </p>
-            <div class="order-elements">
-              <p class="orderNow">Order now</p>
-              <div class="order-input">
-                <input type="number" class="quantity" placeholder="Qty">
-               
-                <input type="submit" value="Send">
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-  </div>
-
 
   <div class="modal my-order">
     <div class="order-summary">
@@ -357,8 +71,10 @@
     </script> <strong>Fast-Food-Fast</strong> developed & designed by <em>Marcdomain</em>
   </footer>
 
-  <script src="js/scroll.js"></script>
-  <script src="js/order.js"></script>
+  <!-- <script src="js/scroll.js"></script> -->
+  <script src="js/fetch/utility.js"></script>
+  <script src="js/fetch/get-all-menu.js"></script>
+  <!-- <script src="js/order.js"></script> -->
 </body>
 
 </html>
