--- a/views/css/style.css
+++ b/views/css/style.css
@@ -355,6 +355,80 @@ nav ul li a {
   box-shadow: 1px 1px 2px 1px #004466;
 }
 
+
+.foodContainer {
+  min-height: 90vh;
+  display: flex;
+  max-width: 1200px;
+  justify-content: space-between;
+  margin: 30px auto;
+  flex-wrap: wrap;
+}
+.menu {
+  height: 450px;
+  max-width: 350px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  box-shadow: 2px 2px 3px 2px gray;
+}
+.menuImage {
+  height: 300px;
+  width: 100%;
+}
+div.menuName {
+  background: #004466;
+  text-align: center;
+  color: #fff;
+  padding: 5px;
+  font-weight: bold;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.details {
+  padding: 5px;
+}
+.description {
+  max-height: 50px;
+  overflow-y: visible;
+  margin-bottom: 10px;
+}
+.orderAction {
+  text-align: center;
+}
+.price {
+  position: absolute;
+  margin: 50px 25px;
+  background: #e59400;
+  padding: 5px;
+  box-shadow: 1px 1px 2px 1px #000;
+}
+.orderBtn {
+  background: #e59400;
+  padding: 2px 5px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 2px 1px #004466;
+}
+.quantityform {
+  margin-top: 10px;
+  display: none;
+  transition: 1s;
+  transition-timing-function: ease-out;
+}
+form input[type='number'] {
+  width: 70px;
+  padding: 3px 5px;
+}
+form input[type='submit'] {
+  background: green;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: bold;
+  padding: 5px;
+}
+
 .food-items {
   max-width: 1200px;
   margin: 0 auto;
@@ -646,10 +720,6 @@ nav ul li a {
   text-align: center;
   padding: 15px 0;
   color: #fff;
-}
-
-.foodContainer {
-  height: 90vh;
 }
 
 .user-front {
