[ft #160920703] Style the response data from get all menu endpoint

--- a/views/food-items.html
+++ b/views/food-items.html
@@ -18,8 +18,8 @@
       </div>
       <nav>
         <ul>
-          <li class="username"><a href="user-orders.html">Profile <sup>70</sup></a></li>
-          <li class="logout"><a href="index.html">Logout</a></li>
+          <li class="username"><a href="user-orders.html">Profile</a></li>
+          <li class="logout"><a>Logout</a></li>
           <li class="dropdown">
             <span>&#8801;</span>
             <div class="dropdown-content">
@@ -34,33 +34,6 @@
   <div class="foodContainer">
     
   </div>
-
-  <div class="modal my-order">
-    <div class="order-summary">
-      <span class="close" id="closeOrder" style="color: #e65c00;">&#10062;</span> <br>
-      <h4>Eba + Vegetable + Turkey</h4>
-      <div class="complete-order">
-        <img src="img/delivery-boy.jpg" alt="delivery-boy" class="delivery-boy">
-        <div class="order-info">
-          <div class="parameter">
-            <div>Location</div>
-            <div>Price</div>
-            <div>Quantity</div>
-            <div class="total">Total</div>
-          </div>
-          <div class="amount">
-            <div>Yaba</div>
-            <div>&#8358; 2000</div>
-            <div>3.00</div>
-            <div class="total-amount">&#8358; 6000</div>
-          </div>
-        </div>
-      </div>
-      <div class="okay-order">
-        <input type="submit" value="Okay">
-      </div>
-    </div>
-  </div>
   
   <div class="scroll-top">&#9652;</div>
   <a href="admin-food-items.html"><div class="user-front">Admin dashboard</div></a>
@@ -71,10 +44,9 @@
     </script> <strong>Fast-Food-Fast</strong> developed & designed by <em>Marcdomain</em>
   </footer>
 
-  <!-- <script src="js/scroll.js"></script> -->
   <script src="js/fetch/utility.js"></script>
   <script src="js/fetch/get-all-menu.js"></script>
-  <!-- <script src="js/order.js"></script> -->
+  <script src="js/fetch/logout.js"></script>
 </body>
 
 </html>
