--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,7 @@
           <input type="button" value="I'm new here" id="signup">
           <input type="button" value="Login" class="login" id="login">
         </div>
+        <a href="food-items.html" style="color: #fff;"><div style="padding-top: 20px;">Checkout available food items</div></a>
 
       </div>
     </div>
