[gh-pages] update fetch methods

--- a/views/add-food-item.html
+++ b/views/add-food-item.html
@@ -49,11 +49,11 @@
             <div class="sub-input">
               <div class="price">
                 <label for="price">Price: <span class="formAlert"></span></label>
-                <input type="number" id="price" class="price" placeholder="Price">
+                <input type="number" id="price" class="price" placeholder="Price" maxlength="6">
               </div>
               <div class="quantity">
                 <label for="quantity">Quantity: <span class="formAlert"></span></label>
-                <input type="number" id="quantity" class="quantity" placeholder="Available quantity">
+                <input type="number" id="quantity" class="quantity" placeholder="Available quantity" maxlength="6">
               </div>
             </div>
             <input type="submit" value="Submit">
