--- a/views/admin-food-items.html
+++ b/views/admin-food-items.html
@@ -8,6 +8,8 @@
   <title>Fast-Food-Fast | Orders</title>
   <link rel="stylesheet" href="css/orders.css">
   <link rel="icon" type="image/png" href="img/logo.png">
+  <script src="js/fetch/authorize-user.js"></script>
+  <script src="js/fetch/jwt-decode.min.js"></script>
 </head>
 
 <body>
