--- a/views/css/orders.css
+++ b/views/css/orders.css
@@ -245,7 +245,7 @@ body {
 }
 
 .unauthorized p{
-  color: orange;
+  color: #e65c00;
   font-size: 1.5em;
   font-weight: bold;
   transition: 1s;
@@ -255,7 +255,7 @@ body {
 .loader {
   border: 5px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 5px solid orange;
+  border-top: 5px solid #e65c00;
   width: 30px;
   height: 30px;
   animation: spin 2s linear infinite;
