--- a/views/food-items.html
+++ b/views/food-items.html
@@ -30,6 +30,9 @@
       </nav>
     </div>
   </header>
+  <div class="order-cart">
+    Submit Order
+  </div>
   
   <div class="foodContainer">
     
